litmask/tests/compile/mask_non_literal_expr.stderr
error: mask! accepts string, byte string, or C string literals
 --> tests/compile/mask_non_literal_expr.rs:9:19
  |
9 |     let _ = mask!(s);
  |                   ^
